--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,18 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dicom = "0.6"
+dicom-object = "0.6"
+dicom-core = "0.6"
+dicom-dictionary-std = "0.6"
+clap = { version = "4.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+anyhow = "1.0"
+walkdir = "2.5"
+zip = "0.6"
+rayon = "1.11"
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
+indicatif = "0.17"
+
